[gd_scene load_steps=5 format=3 uid="uid://7ktiy52rje38"]

[ext_resource type="Texture2D" uid="uid://bukwvqwit6bmw" path="res://platforms/collapsable_platforms/creaky_board.png" id="1_hofj7"]
[ext_resource type="Script" path="res://platforms/collapsable_platforms/collapsable_platforms.gd" id="1_rcysx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km6ps"]
size = Vector2(81, 24.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws826"]
size = Vector2(83, 15)

[node name="CollapsablePlatforms" type="AnimatableBody2D"]
script = ExtResource("1_rcysx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(30, -1)
scale = Vector2(0.236, 0.188)
texture = ExtResource("1_hofj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(30.5, 1.25)
shape = SubResource("RectangleShape2D_km6ps")

[node name="CollapseTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(29.5, -9.5)
shape = SubResource("RectangleShape2D_ws826")

[connection signal="completed_movement" from="." to="." method="_on_completed_movement"]
[connection signal="timeout" from="CollapseTimer" to="." method="_on_collapse_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
